--- a/.github/workflows/jdcloud ax1800 pro.yml
+++ b/.github/workflows/jdcloud ax1800 pro.yml
@@ -24,7 +24,7 @@ on:
 permissions:
   contents: write
 env:
-  REPO_URL: https://github.com/openwrt-ipq60xx/openwrt-legacy.git
+  REPO_URL: https://github.com/Doanduy09/ipq60xx-6.6.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config-jdc
